--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage</title>
+</head>
+<body>
+    <h1>Hi and welcome to the Homepage</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <br> page break
+    <hr> horizontal row
+    <ol>
+        <label for="text">Ingredients for Pulao (In Ordered List) </label>
+        <li>paneer</li>
+        <li>rice</li>
+        <li>spices</li>
+    </ol>
+    <ul>
+        <label for="text">Ingredients for Pulao (In Un-Ordered List)</label>
+        <li>paneer</li>
+        <li>rice</li>
+        <li>spices</li>
+    </ul>
+</body>
 
+</html>
