--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <br> page break
     <hr> horizontal row
     <br>
+    <img src="https://www.shutterstock.com/shutterstock/photos/2468763009/display_1500/stock-photo-biryani-rice-indian-meal-chicken-vector-2468763009.jpg" alt="No image found">
     <ol>
         <label for="text">Ingredients for Pulao (In Ordered List) </label>
         <li>paneer</li>
